fix(VotingSubject): fix noticeable DOM shift

--- a/src/components/VotingSubject/VotingSubject.styles.scss
+++ b/src/components/VotingSubject/VotingSubject.styles.scss
@@ -9,10 +9,7 @@
     min-height: 80px;
     padding: 0 20px;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
-
-    &:hover {
-        border: 1px solid #37474f;
-    }
+    cursor: pointer;
 
     .sect-1,
     .sect-2,
@@ -49,4 +46,8 @@
     .sect-3 {
         min-width: 50px;
     }
+}
+
+.voting-subject__loading {
+    min-height: 80px;
 }
